observability/logging/eck/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: kibana.demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: logging-kb-http
            port:
              number: 5601
